@@ -58,8 +58,7 @@ public class RowMutationVerbHandler implements IVerbHandler
                     ByteBuffer addressBytes = ByteBufferUtil.readWithShortLength(dis);
                     if (logger_.isDebugEnabled())
                         logger_.debug("Adding hint for " + InetAddress.getByName(ByteBufferUtil.string(addressBytes)));
-                    RowMutation hintedMutation = new RowMutation(Table.SYSTEM_TABLE, addressBytes);
-                    hintedMutation.addHints(rm);
+                    RowMutation hintedMutation = RowMutation.hintFor(rm, addressBytes);
                     hintedMutation.apply();
                 }
             }
